Modifiche parziali swagger.yaml, rivisionare per sicurezza. Ciao
