# swagger.yaml
@@ -11,6 +11,7 @@ tags:
 - name: "Images"
 - name: "Videos"
 - name: "Images Filters"
+- name; "Video Transformation"
 schemes:
 - http
 consumes:
@@ -151,7 +152,7 @@ paths:
         - application/json
       produces:
         - application/json
-      responses:
+      responses:xx
         201:
           description: Successful Response
           schema:
@@ -200,6 +201,120 @@ paths:
           description: Successful Response
           schema:
             $ref: '#/definitions/ImVidResponse' 
+  /video-transformation:
+    get:
+      tags:
+        - "Video Transformation"
+      summary: List the available video transformation 
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        200:
+          description: Successful Response
+          schema:
+            $ref: '#/definitions/VideoTranformationList'
+          
+            type: object
+            properties:
+              available:
+                type: array
+                items:
+                  $ref: '#/definitions/videoTransformationList'
+            example:
+              avaliable:
+                - name: cut
+                  parameters: "source:videoID, pixel_x:int, pixel_y:int"
+                  description: Resize a video with respect to parameters pixel_x (width) and pixel_y (height)
+                - name: speedup
+                  parameters: "source:videoID, factor:double"
+                  description: Speed up a video at factor time
+                - name: "resize",
+                  schema: "source:videoID, pixel_x:int, pixel_y:int",
+                  description: "Resize a video with respect to parameters pixel_x (width) and pixel_y (height)"
+
+  /video-transformation/speedup:
+    post: 
+      tags:
+        - "Speed Up"
+      summary: Speed up a video at factor time
+      parameters:
+        - in: query
+          name: source
+          type: string
+          required: true
+        - in: query
+          name: factor
+          type: double
+          required: true
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:xx
+        201:
+          description: Successful Response
+          schema:
+            $ref: '#/definitions/ImVidResponse'
+  /video-transformation/cut:
+    post: 
+      tags:
+        - "Cut"
+      summary: Cut a video from start_time to end_time
+      parameters:
+        - in: query
+          name: source
+          type: string
+          required: true
+        - in: query
+          name: start_time
+          type: double
+          required: true
+        - in: query
+          name: end_time
+          type: double
+          required: true
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:xx
+        201:
+          description: Successful Response
+          schema:
+            $ref: '#/definitions/ImVidResponse'
+  /video-transformation/resize:
+    post: 
+      tags:
+        - "Resize"
+      summary: Resize a video with respect to parameters pixel_x (width) and pixel_y (height)
+      parameters:
+        - in: query
+          name: source
+          type: string
+          required: true
+        - in: query
+          name: pixel_x
+          type: double
+          required: true
+        - in: query
+          name: pixel_y
+          type: double
+          required: true
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:xx
+        201:
+          description: Successful Response
+          schema:
+            $ref: '#/definitions/ImVidResponse'
+  
+
+
+
 definitions:
   ImVidUpload:
     title: ImVidUpload
@@ -235,6 +350,10 @@ definitions:
             Every pixel of the image is made either white or black
             It dependes on the treshold value
     
+
+
+
+            
   Filter:
     title: Filter
     type: object
